--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/brilliantblinds-01-22/">https://rank-fortress-digital-agency.github.io/brilliantblinds-01-22/</a><br>
-                <a target="_bLank" href="http://brilliantblinds-01-22.s3-website-ap-southeast-1.amazonaws.com">http://brilliantblinds-01-22.s3-website-ap-southeast-1.amazonaws.com</a><br>
-                <a target="_bLank" href="https://euphonious-tarsier-7f1754.netlify.app/">https://euphonious-tarsier-7f1754.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/brilliantblinds-05-22/">https://rank-fortress-digital-agency.github.io/brilliantblinds-05-22/</a><br>
+                <a target="_bLank" href="http://brilliantblinds-05-22.s3-website.ap-northeast-2.amazonaws.com">http://brilliantblinds-05-22.s3-website.ap-northeast-2.amazonaws.com</a><br>
+                <a target="_bLank" href="https://melodic-bubblegum-ba306e.netlify.app/">https://melodic-bubblegum-ba306e.netlify.app/</a><br>
             </section>
 
         </div>
